@@ -847,6 +847,33 @@ public class StructureImportingTest extends MavenImportingTestCase {
     assertEquals(LanguageLevel.JDK_1_3, getLanguageLevelForModule());
   }
 
+  public void testPreviewLanguageLevel() {
+    importProject("<groupId>test</groupId>" +
+                  "<artifactId>project</artifactId>" +
+                  "<version>1</version>" +
+
+                  "<build>" +
+                  "  <plugins>" +
+                  "    <plugin>\n" +
+                  "      <groupId>org.apache.maven.plugins</groupId>\n" +
+                  "      <artifactId>maven-compiler-plugin</artifactId>\n" +
+                  "      <version>3.8.0</version>\n" +
+                  "      <configuration>\n" +
+                  "          <release>12</release>\n" +
+                  "          <compilerArgs>\n" +
+                  "              <arg>--enable-preview</arg>\n" +
+                  "          </compilerArgs>\n" +
+                  "          <source>12</source>\n" +
+                  "          <target>12</target>\n" +
+                  "      </configuration>\n" +
+                  "    </plugin>" +
+                  "  </plugins>" +
+                  "</build>");
+
+    assertModules("project");
+    assertEquals(LanguageLevel.JDK_12_PREVIEW, getLanguageLevelForModule());
+  }
+
   public void testInheritingLanguageLevelFromPluginManagementSection() {
     importProject("<groupId>test</groupId>" +
                   "<artifactId>project</artifactId>" +
